# genskellie

./: -  README.md  makefile  pyproject.toml
src/genskellie/: __main__.py  __meta__.py  gen_util.py
src/genskellie/config/C/: header.skel  interface.skel  test.skel
src/genskellie/config/Python/: class.skel  def.skel  module.skel  script.skel  section_divider.skel
src/genskellie/langs/: __init__.py  file_types.py  gen_c.py  gen_python.py  supported_languages.py
