[project]
name = "genskellie"
dynamic = ["version"]
description = "Dynamically generate skeletons for various languages."
authors = [
    {name = "Alexander Brown", email = "alex.brown7711@gmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
genskellie = 'genskellie.__main__:run'

[tool.setuptools.dynamic]
version = {attr = 'src.genskellie.__meta__.__version__'}

[tool.pdm]
distribution = true
